shifted user dropdown over in attempt to fix pushing issue

--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -424,7 +424,7 @@ a {
         border-radius: 0 0 10px 10px;
     }
     .user-content {
-        translate: -2.5em 7.8em;
+        translate: -3em 7.8em;
         width: 10em;
     }
     .user-content a {
